--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cagnotte - Objectif 2000€</title>
+    <title>Cagnotte 30 ans de Léonie</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <style>
         body {
@@ -111,7 +111,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Cagnotte Solidaire</h1>
+        <h1>Cagnotte | 30 ans de Léonie</h1>
         
         <div class="montant" id="montantActuel">€ 1000</div>
         <div class="objectif" id="objectifTotal">Objectif : € 2000</div>
