--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <div class="info">
             <div class="info-item">
                 <div class="info-label">Participants</div>
-                <div class="info-value">50</div>
+                <div class="info-value">${participants}</div>
             </div>
             <div class="info-item">
                 <div class="info-label">Jours restants</div>
@@ -157,6 +157,7 @@
     </div>
 
     <script>
+        const participants = 2;
         const montantActuel = 130; // Modifiez cette valeur pour mettre à jour le montant actuel
         const objectifTotal = 2000;
 
