--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         <div class="url"><a href="https://www.adrisport.com/velo-gravel-le-vadrouille-vert-cameleon/">Voir les caractéristiques du vélo</a></div>
         
         <div class="rib">
-            <h3>Coordonnées bancaires</h3>
+            <h3>Pour participer, il suffit de faire un virement ici !</h3>
             <button id="showRibBtn">Afficher le RIB</button>
             <div id="ribContent">
                 <p>IBAN : FR76 1234 5678 9012 3456 7890 123</p>
@@ -207,7 +207,7 @@
                 showRibBtn.textContent = 'Masquer le RIB';
             } else {
                 ribContent.style.display = 'none';
-                showRibBtn.textContent = 'Pour participer, effectuez un virement au RIB en cliquant ici';
+                showRibBtn.textContent = 'Afficher le RIB';
             }
         });
 
