--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@
     <script>
         const montantActuel = 130; // Modifiez cette valeur pour mettre à jour le montant actuel
         const objectifTotal = 2000;
+        const participants = 2;
 
         function calculerJoursRestants() {
             const dateFin = new Date('2025-05-09');
