--- a/index.html
+++ b/index.html
@@ -184,17 +184,16 @@
         
         <div class="rib">
             <h3>Participez à la cagnotte</h3>
-            <h4>C'est sans commission !</h4>
-            <button id="showRibBtn">Participer par virement bancaire</button>
+            <button id="showRibBtn">Participer par virement bancaire (sans commission)</button>
             <div id="ribContent">
                 <p>IBAN : FR802043302626N269622304979</p>
                 <p>BIC : NTSBFRM1XXX</p>
             </div>
         </div>
 
-        <button id="payWeroBtn">Payer via Wero</button>
-        <div id="weroInfo">Mon numéro de téléphone : +33 6 12 34 56 78</div>
-        <a href="https://example.com" target="_blank" id="payCBBtn">Payer par CB</a>
+        <button id="payWeroBtn">Payer via Wero (sans commission)</button>
+        <div id="weroInfo">Au O6 1O 27 84 15</div>
+        <a href="https://example.com" target="_blank" id="payCBBtn">Payer par CB (avec commission)</a>
     </div>
 
     <script>
