--- a/index.html
+++ b/index.html
@@ -189,12 +189,16 @@
                 <p>IBAN : FR802043302626N269622304979</p>
                 <p>BIC : NTSBFRM1XXX</p>
             </div>
-            <button id="payWeroBtn">Payer via Wero<br />(sans commission)</button>
-            <div id="weroInfo">Au O6 1O 27 84 15</div>
-            <a href="https://example.com" target="_blank" id="payCBBtn">Payer par CB<br />(avec commission)</a>
         </div>
 
-        
+        <div class="wero">
+            <button id="payWeroBtn">Payer via Wero<br />(sans commission)</button>
+            <div id="weroInfo">Au O6 1O 27 84 15</div>
+        </div>
+
+        <div class="cb">
+            <a href="https://example.com" target="_blank" id="payCBBtn">Payer par CB<br />(avec commission)</a>
+        </div>
     </div>
 
     <script>
