--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         <div class="boutons">
             <button id="showRibBtn">Participer par virement bancaire<br />(sans commission)</button>
             <button id="payWeroBtn">Payer via Wero<br />(sans commission)</button>
-            <a href="https://example.com" target="_blank" id="payCBBtn">Payer par CB<br />(avec commission)</a>
+            <a href="https://www.papayoux.com/fr/cagnotte/leonie-30-ans" target="_blank" id="payCBBtn">Payer par CB<br />(avec commission)</a>
         </div>
         <div id="ribContent">
             <p>IBAN : FR802043302626N269622304979</p>
