--- a/index.html
+++ b/index.html
@@ -189,10 +189,7 @@
             <a href="https://www.papayoux.com/fr/cagnotte/leonie-30-ans" target="_blank" id="payCBBtn">Payer par CB<br />(avec commission)</a>
         </div>
         <div id="ribContent">
-            <p>Titulaire : le copain de Léonie :)</p>
-            <p>IBAN : FR8O 2O43 3O26 26N2 6962 23O4 979</p>
-            <p>BIC : NTSBFRM1XXX</p>
-            <p>(Attention à bien remplacer les O par des zéros (0)</p>
+            <img id="ribImage" src="https://raw.githubusercontent.com/cupain/cupain.github.io/main/banque.png" alt="Image du RIB">
         </div>
         <div id="weroInfo">Au O6 1O 27 84 15</div>
 
