--- a/index.html
+++ b/index.html
@@ -207,6 +207,7 @@
         const montantActuel = 130; // Modifiez cette valeur pour mettre à jour le montant actuel
         const objectifTotal = 2000;
         const participants = 2;
+        const ribImage = document.getElementById('ribImage');
 
         function calculerJoursRestants() {
             const dateFin = new Date('2025-05-09');
