--- a/index.html
+++ b/index.html
@@ -195,8 +195,9 @@
         <h1>Cagnotte pour les 30 ans de Léonie</h1>
 
         <div>
-            <p>On propose de lui acheter enfin un bon vélo à sa taille !</p>
-            <p>Et plutôt que d'organiser une seule grande fête, on propose de rendre visite en vélo toute personne qui participe à cette cagnotte</p>
+            <h2>Offrons-lui enfin un bon vélo à sa taille !</h2>
+            <p>Et de quoi l'équiper pour de beaux voyages</p>
+            <p>Plutôt que d'organiser une seule grande fête, on propose de rendre visite en vélo toute personne qui participe à la cagnotte. Laissez votre adresse !</p>
         </div>
         
         <div class="montant" id="montantActuel"></div>
