--- a/index.html
+++ b/index.html
@@ -195,9 +195,9 @@
         <h1>Cagnotte pour les 30 ans de Léonie</h1>
 
         <div>
-            <h2>Offrons-lui enfin un bon vélo à sa taille !</h2>
+            <h2>Offrons-lui un bon vélo 🚲 dont elle rêve depuis longtemps !</h2>
             <p>(et de quoi l'équiper pour de beaux voyages)</p>
-            <h3>Plutôt que d'organiser une seule grande fête, on propose de rendre visite en vélo toute personne qui participe à la cagnotte. Laissez votre adresse !</h3>
+            <h3>Plutôt que d'organiser une seule grande fête, on propose que Léonie rende visite en vélo à toute personne qui participe à la cagnotte !</h3>
         </div>
 
         <a href="https://www.adrisport.com/velo-gravel-le-vadrouille-marron/">
