--- a/index.html
+++ b/index.html
@@ -230,6 +230,7 @@
         </div>
         
         <div id="ribContent">
+            <p>Au nom de Thibaut (sans L) Lecourt </p>
             <img id="ribImage" src="https://raw.githubusercontent.com/cupain/cupain.github.io/main/banque.png" alt="Image du RIB">
         </div>
         
