--- a/index.html
+++ b/index.html
@@ -239,8 +239,8 @@
     </div>
 
     <script>
-        const montantActuel = ; // Modifiez cette valeur pour mettre à jour le montant actuel
-        const objectifTotal = 800;
+        const montantActuel = 800; // Modifiez cette valeur pour mettre à jour le montant actuel
+        const objectifTotal = 2000;
         const ribImage = document.getElementById('ribImage');
 
         function calculerJoursRestants() {
