--- a/index.html
+++ b/index.html
@@ -197,7 +197,6 @@
          <div>
             <p>Le 9 mai prochain, Léonie fête ses 30 ans</p>
             <h3>Offrons-lui un bon vélo 🚲 dont elle rêve depuis longtemps !</h3>
-            <p>(et de quoi l'équiper pour de beaux voyages)</p>
             <p>Plutôt que d'organiser une seule grande fête, on propose que Léonie rende visite en vélo à toute personne qui participe à la cagnotte !</p>
         </div>
 
@@ -210,6 +209,7 @@
         </div>
         <div class="montant" id="montantActuel"></div>
         <div class="objectif" id="objectifTotal"></div>
+        <p>incluant : le vélo + montage, réglage, marquage, pédales, changement de la selle, antivol et porte-bagages !</p>
         
         <div class="progress-container">
             <div class="progress-bar">
@@ -239,7 +239,7 @@
     </div>
 
     <script>
-        const montantActuel = 1640; // Modifiez cette valeur pour mettre à jour le montant actuel
+        const montantActuel = 1610; // Modifiez cette valeur pour mettre à jour le montant actuel
         const objectifTotal = 2200;
         const ribImage = document.getElementById('ribImage');
 
