--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
          <div>
             <p>Le 9 mai prochain, Léonie fête ses 30 ans</p>
             <h3>Offrons-lui un bon vélo 🚲 dont elle rêve depuis longtemps !</h3>
+            <h4>et made in Bretagne !</h4>
             <p>Plutôt que d'organiser une seule grande fête, on propose que Léonie rende visite en vélo à toute personne qui participe à la cagnotte !</p>
         </div>
 
