--- a/index.html
+++ b/index.html
@@ -217,6 +217,11 @@
                 <div class="progress" id="progressBar"></div>
             </div>
         </div>
+
+        <p>Et si on dépasse l'objectif ?</p>
+        <a href="https://fr.ortlieb.com/products/vario?_pos=1&_fid=215d0b4b9&_ss=c" target="_blank">
+            Des belles sacoches de voyage !
+        </a>
         
         <div class="info">
             <div class="info-item">
