--- a/index.html
+++ b/index.html
@@ -294,9 +294,11 @@
   <li data-price="30">🦯 Béquille : <span>30 €</span></li>
   <li data-price="90">🔒 Antivol : <span>90 €</span></li>
   <li data-price="40">📦 Porte-bagages : <span>40 €</span></li>
+  <li data-price="20">💦 Porte-bidons : <span>20 €</span></li>
   <li data-price="70">💡 Pack lumière : <span>70 €</span></li>
   <li data-price="70">🧳 Housse de transport : <span>70 €</span></li>  
-  <li data-price="500">🎒 Sacoches Ortlieb (fourche, seat-pack, guidon cadre): <span>500 €</span></li>
+  <li data-price="250">🎒 Sacoches Ortlieb (fourche et seat-pack) : <span>250 €</span></li>
+  <li data-price="250">🎒 Sacoches Ortlieb (guidon et cadre) : <span>250 €</span></li>
 </ul>
 
  <div>
